--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   extract-data-jobs
-    runs on: ubuntu-latest
+    runs-on:ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -17,7 +17,7 @@ jobs:
         run: python extract.py
 
   transform-data-jobs
-    runs on: ubuntu-latest
+    runs-on:ubuntu-latest
     needs:extract-data-jobs
     steps:
       - name: Checkout code
@@ -27,7 +27,7 @@ jobs:
         run: python transform.py
     
   load-data-jobs
-    runs on: ubuntu-latest
+    runs-on:ubuntu-latest
     needs:transform-data-jobs
     steps:
       - name: Checkout code
