--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,33 +5,52 @@ on:
   push:
     branches:
       - main
+  workflow_dispatch: {}
 
 jobs:
-  extract-data-jobs
-    runs-on:ubuntu-latest
+  extract:
+    name: Extract
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
-      - name: run extract.py
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'
+
+      - name: Run extract
         run: python extract.py
 
-  transform-data-jobs
-    runs-on:ubuntu-latest
-    needs:extract-data-jobs
+  transform:
+    name: Transform
+    needs: extract        # waits for extract job to finish successfully
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
-      - name: run transform.py
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'
+
+      - name: Run transform
         run: python transform.py
-    
-  load-data-jobs
-    runs-on:ubuntu-latest
-    needs:transform-data-jobs
+
+  load:
+    name: Load
+    needs: transform      # waits for transform
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
-      - name: run load.py
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'
+
+      - name: Run load
         run: python load.py
