--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,52 +5,33 @@ on:
   push:
     branches:
       - main
-  workflow_dispatch: {}
 
 jobs:
-  extract:
-    name: Extract
+  extract-data-jobs
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v2
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.x'
-
-      - name: Run extract
+      - name: run extract.py
         run: python extract.py
 
-  transform:
-    name: Transform
-    needs: extract        # waits for extract job to finish successfully
+  transform-data-jobs
     runs-on: ubuntu-latest
+    needs:extract-data-jobs
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v2
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.x'
-
-      - name: Run transform
+      - name: run transform.py
         run: python transform.py
-
-  load:
-    name: Load
-    needs: transform      # waits for transform
+    
+  load-data-jobs
     runs-on: ubuntu-latest
+    needs:transform-data-jobs
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v2
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.x'
-
-      - name: Run load
+      - name: run load.py
         run: python load.py
